fixed scrollbar on index.html

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -27,6 +27,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  overflow: hidden;
   color: white;
 }
 
